--- a/views/user/partials/footer.ejs
+++ b/views/user/partials/footer.ejs
@@ -1,9 +1,10 @@
 </main>
 
-    <footer class="bg-white border-t mt-auto py-6">
+    <footer class="bg-white border-t mt-auto py-6 w-full">
         <div class="text-center text-gray-500 text-sm">
             &copy; 2025 Dinas Kearsipan dan Perpustakaan Provinsi Sumatera Barat
         </div>
     </footer>
+
 </body>
 </html>
