--- a/views/user/detail.ejs
+++ b/views/user/detail.ejs
@@ -148,7 +148,7 @@
         <div class="lg:col-span-3 space-y-6">
             
             <!-- WIDGET QR CODE -->
-            <div class="bg-white border border-blue-200 rounded overflow-hidden shadow-sm">
+            <!-- <div class="bg-white border border-blue-200 rounded overflow-hidden shadow-sm">
                 <div class="bg-blue-50 px-3 py-2 border-b border-blue-100">
                     <h4 class="text-sm font-bold text-blue-800 flex items-center">
                         <i class="fas fa-qrcode mr-2"></i> Simpan Info Buku
@@ -172,7 +172,7 @@
                         <i class="fas fa-print mr-2"></i> Cetak Info Buku
                     </button>
                 </div>
-            </div>
+            </div> -->
 
             <!-- WIDGET KARYA TERKAIT -->
             <div class="bg-white border border-gray-300 rounded overflow-hidden shadow-sm">
